outputs/ndx-test/eoh/2025-07-28_14-53-21/evaluations/problem_eval-8200342981313688089_stdout.txt
Traceback (most recent call last):
  File "/home/rjj/reevo/problems/ndx/eval.py", line 9, in <module>
    import gpt
  File "/home/rjj/reevo/problems/ndx/gpt.py", line 3
    # Calculate daily returns
                             ^
IndentationError: expected an indented block after function definition on line 2
